--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
                             <div class="option-row">
                                 <div class="checkbox-group">
                                     <input type="checkbox" id="nameLangTh" checked>
-                                    <label for="nameLangTh">🇹🇭 ไทย</label>
+                                    <label for="nameLangTh">ไทย</label>
                                 </div>
                                 <div class="checkbox-group">
-                                    <input type="checkbox" id="nameLangEn">
-                                    <label for="nameLangEn">🇬🇧 อังกฤษ</label>
+                                    <input type="checkbox" id="nameLangEn" checked>
+                                    <label for="nameLangEn">อังกฤษ</label>
                                 </div>
                             </div>
                         </div>
@@ -130,7 +130,7 @@
                                     <label for="nameTypeLast">นามสกุล</label>
                                 </div>
                                 <div class="checkbox-group">
-                                    <input type="checkbox" id="nameTypeNickname">
+                                    <input type="checkbox" id="nameTypeNickname" checked>
                                     <label for="nameTypeNickname">ชื่อเล่น</label>
                                 </div>
                             </div>
