--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <span class="checkbox-group-title">เลือกภาษา</span>
                             <div class="option-row">
                                 <div class="checkbox-group">
-                                    <input type="checkbox" id="nameLangTh" checked>
+                                    <input type="checkbox" id="nameLangTh">
                                     <label for="nameLangTh">ไทย</label>
                                 </div>
                                 <div class="checkbox-group">
@@ -130,7 +130,7 @@
                                     <label for="nameTypeLast">นามสกุล</label>
                                 </div>
                                 <div class="checkbox-group">
-                                    <input type="checkbox" id="nameTypeNickname" checked>
+                                    <input type="checkbox" id="nameTypeNickname">
                                     <label for="nameTypeNickname">ชื่อเล่น</label>
                                 </div>
                             </div>
