--- a/json.html
+++ b/json.html
@@ -57,6 +57,12 @@
         <div id="copyNotification" class="copy-notification">
             คัดลอกข้อมูลสำเร็จ! 📋
         </div>
+
+        <!-- Navigation Section -->
+        <div class="home-button-center">
+            <a href="index.html" class="btn btn-gohome">🏠 กลับหน้าแรก</a>
+        </div>
+        <!-- <a href="index.html" class="btn btn-secondary" style="margin:10px 0;display:inline-block;">กลับหน้าแรก</a> -->
     </div>
 
 <script src="js/myscripts_json.js"></script>
