--- a/index.html
+++ b/index.html
@@ -181,8 +181,13 @@
                 </div>
             </div>
         </div>
+        <!-- Navigation Section -->
+        <div class="button-group">
+            <a href="json.html" class="btn btn-gojson ">📊 ไปหน้า JSON to Table</a>
+        </div>
     </div>
 
+    <!-- <a href="json.html" class="btn btn-secondary" style="margin:10px 0;display:inline-block;">ไปหน้า JSON to Table</a> -->
     
 <script src="js/myscripts.js"></script>
 
