--- a/json.html
+++ b/json.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🗃️</text></svg>">
     <link rel="stylesheet" href="css/mystyle_json.css">
     <title>JSON to Table Converter</title>
 </head>
 <body>
     <div class="container">
-        <h1>JSON to Table Converter</h1>
+    </n><h1>JSON to Table Converter</h1>
         
         <div class="input-section">
             <div class="input-group">
@@ -59,11 +60,21 @@
         </div>
 
         <!-- Navigation Section -->
-        <div class="home-button-center">
-            <a href="index.html" class="btn btn-gohome">🏠 กลับหน้าแรก</a>
-        </div>
+        <!-- <div class="nav-menu">
+            <a href="index.html" class="btn-nav">หน้าแรก</a>
+            <a href="json.html" class="btn-nav">JSON ➔ Table</a>
+            <a href="json_formatter.html" class="btn-nav">JSON Formatter</a>
+        </div> -->
         <!-- <a href="index.html" class="btn btn-secondary" style="margin:10px 0;display:inline-block;">กลับหน้าแรก</a> -->
     </div>
+
+    <div class="theme-button-group">
+        <!-- <button class="toggle-theme" id="btn-theme" onclick="toggleTheme()" data-tooltip="เปลี่ยนธีม">🌙</button> -->
+        <button class="toggle-theme" id="btn-formatter" onclick="navigateTo('json_formatter.html')" data-tooltip="JSON Formatter">🧰</button>
+        <button class="toggle-theme" id="btn-json" onclick="navigateTo('json.html')" data-tooltip="JSON ➔ Table">🗃️</button>
+        <button class="toggle-theme" id="btn-index" onclick="navigateTo('index.html')" data-tooltip="สุ่มเลข, GUID, ชื่อ & เลขตามสั่ง">🎲</button>
+    </div>
+    <!-- <button class="toggle-theme" onclick="toggleTheme()" title="Toggle Dark/Light Mode">🌙</button> -->
 
 <script src="js/myscripts_json.js"></script>
 </body>
